test_suite/tests/ui/duplicate-attribute/two-rename-ser.stderr
error: duplicate serde attribute `rename`
 --> $DIR/two-rename-ser.rs:7:13
  |
7 |     #[serde(rename(serialize = "y"))]
  |             ^^^^^^

error: aborting due to previous error

